2014-11-22         Arnold D. Robbins     <arnold@skeeve.com>

	* awk.h (emalloc, realloc): Redefine in terms of ...
	(emalloc_real, eralloc_real): New static inline functions.
	(fatal): Move definition up.
	* gawkmisc.c (xmalloc): If count is zero, make it one for older
	mallocs that require size > 0 (such as z/OS).

2014-11-21         Arnold D. Robbins     <arnold@skeeve.com>

	* main.c: Remove a debugging // comment.
	* NOTES: Removed.

	Unrelated:

	Revert changes of 2014-11-20 from Paul Eggert. Causes failures
	on z/OS.

	Unrelated: Avoid unnecessary copying of $0.

	* interpret.h (UNFIELD): New macro.
	(r_interpret): Use it where *lhs is assigned to.

2014-11-20  Paul Eggert  <eggert@cs.ucla.edu>

	Port to systems where malloc (0) and/or realloc(P, 0) returns NULL.
	* gawkmisc.c (xmalloc):
	* xalloc.h (realloc):
	Do not fail if malloc(0) or realloc(P, 0) returns NULL.
	Fail only when the allocator returns null when attempting to
	allocate a nonzero number of bytes.

2014-11-19         Arnold D. Robbins     <arnold@skeeve.com>

	Infrastructure upgrades:

	* Automake 1.14.1, Gettext 0.19.3, Libtool 2.4.3.
	* compile, extension/build-aux/compile: New files.

2014-11-19  gettextize  <bug-gnu-gettext@gnu.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Bump to 0.19.3.

2014-11-16         Arnold D. Robbins     <arnold@skeeve.com>

	* interpret.h: Revert change of 2014-11-11 since it breaks
	certain uses.

	Unrelated:

	* dfa.c: Sync with GNU grep.

2014-11-15         Arnold D. Robbins     <arnold@skeeve.com>

	* array.c, awk.h, awkgram.y, builtin.c, dfa.c, eval.c, field.c,
	interpret.h, io.c, main.c, mpfr.c, node.c, re.c, regex_internal.h,
	replace.c: Remove all uses of MBS_SUPPORT.
	* regex_internal.h: Disable wide characters on DJGPP.
	* mbsupport.h: Rework to be needed only for DJGPP.

2014-11-11         Arnold D. Robbins     <arnold@skeeve.com>

	Don't let memory used increase linearly in the size of
	the input.  Problem reported by dragan legic