@@ -1,3 +1,8 @@
+2014-11-23         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* inplace.c (do_inplace_begin): Jump through hoops to silence
+	GCC warnings about return value of chown.
+
 2014-10-12         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (uninstall-so): Remove *.lib too, per suggestion
