@@ -1,3 +1,8 @@
+2014-11-23         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awk.h: Move all inline functions to the bottom of the file.
+	Keeps modern GCC happier.
+
 2014-11-22         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* awk.h (emalloc, realloc): Redefine in terms of ...
